err/stateutil.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/argh'...
Listing './lib/python3.5/site-packages/argh-0.26.2.dist-info'...
Listing './lib/python3.5/site-packages/better_exceptions'...
Listing './lib/python3.5/site-packages/better_exceptions-0.1.8.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/classutils'...
Listing './lib/python3.5/site-packages/classutils/unittests'...
Listing './lib/python3.5/site-packages/classutils/unittests/class_augmentations'...
Listing './lib/python3.5/site-packages/classutils-1.4.2.dist-info'...
Listing './lib/python3.5/site-packages/conversionutil'...
Listing './lib/python3.5/site-packages/conversionutil/unittests'...
Listing './lib/python3.5/site-packages/conversionutil-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/dominate'...
Listing './lib/python3.5/site-packages/dominate-2.3.1.egg-info'...
Listing './lib/python3.5/site-packages/fdutil'...
Compiling './lib/python3.5/site-packages/fdutil/crossplatform_startfile.py'...
***   File "./lib/python3.5/site-packages/fdutil/crossplatform_startfile.py", line 337
    print 'Unable to open "%s"' % arg
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/fdutil/resources'...
Compiling './lib/python3.5/site-packages/fdutil/string_scanner.py'...
***   File "./lib/python3.5/site-packages/fdutil/string_scanner.py", line 383
    print u'after "some ":"%s"' % s.peek
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/fdutil/unittests'...
Compiling './lib/python3.5/site-packages/fdutil/unittests/test_file_utils.py'...
***   File "./lib/python3.5/site-packages/fdutil/unittests/test_file_utils.py", line 51
    for path in u'test_data/file_utils/get_files/file1.json',
                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fdutil/utf8file.py'...
***   File "./lib/python3.5/site-packages/fdutil/utf8file.py", line 71
    print 'read this -->',x.readline(),'<--'
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fdutil-1.6.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/logging_helper'...
Listing './lib/python3.5/site-packages/logging_helper/unittests'...
Listing './lib/python3.5/site-packages/logging_helper-1.7.0.dist-info'...
Listing './lib/python3.5/site-packages/pathtools'...
Listing './lib/python3.5/site-packages/pathtools-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyperclip'...
Listing './lib/python3.5/site-packages/pyperclip-1.6.0.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/stateutil'...
Listing './lib/python3.5/site-packages/stateutil/unittests'...
Listing './lib/python3.5/site-packages/stateutil-1.0.11.dist-info'...
Listing './lib/python3.5/site-packages/timingsutil'...
Compiling './lib/python3.5/site-packages/timingsutil/jdutil.py'...
***   File "./lib/python3.5/site-packages/timingsutil/jdutil.py", line 466
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/timingsutil/unittests'...
Listing './lib/python3.5/site-packages/timingsutil-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/watchdog'...
Listing './lib/python3.5/site-packages/watchdog/observers'...
Listing './lib/python3.5/site-packages/watchdog/tricks'...
Listing './lib/python3.5/site-packages/watchdog/utils'...
Listing './lib/python3.5/site-packages/watchdog-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
